FIX: Btn wrapping

--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -93,6 +93,7 @@ $btn-variant-hover: (
     align-items: center;
     justify-content: center;
     flex: 1;
+    white-space: nowrap;
   }
 
 
